[gd_scene load_steps=5 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://player/player.tres" type="SpriteFrames" id=2]
[ext_resource path="res://player/weapon.gd" type="Script" id=18]

[sub_resource type="CapsuleShape2D" id=2]
radius = 13.0
height = 10.0

[node name="Player" type="KinematicBody2D"]
z_index = 1
collision_layer = 2
collision_mask = 157
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
animation = "New Anim"

[node name="AnimatedSprite" type="AnimatedSprite" parent="AnimatedSprite"]
frames = ExtResource( 2 )
animation = "New Anim"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 9 )
shape = SubResource( 2 )

[node name="Weapon" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4
script = ExtResource( 18 )

[node name="HurtBox" type="CollisionPolygon2D" parent="Weapon"]
polygon = PoolVector2Array( 30, 6, 29, 23, 21, 36, 7, 43, -9, 44, -21, 34, -28, 21, -29, 10 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="AnimatedSprite/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Weapon" to="." method="_on_Weapon_body_entered"]
